<resources>
    <string name="app_name">Food Recipes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recipes">Recipes</string>
    <string name="favorites">Favorites</string>
    <string name="joke">Joke</string>
    <string name="content_recipes_fab">An icon of restaurant</string>
    <string name="content_recipes_error">A sad image</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="lorem_ipsum_paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="lorem_ipsum_title">Lorem ipsum dolor sit amet</string>
    <string name="str_100">100</string>
    <string name="str_vegan">Vegan</string>
    <string name="meal_type">Meal Type</string>
    <string name="main_course">Main Course</string>
    <string name="drink">Drink</string>
    <string name="snack">Snack</string>
    <string name="fingerfood">Fingerfood</string>
    <string name="marinade">Marinade</string>
    <string name="sauce">Sauce</string>
    <string name="beverage">Beverage</string>
    <string name="soup">Soup</string>
    <string name="breakfast">Breakfast</string>
    <string name="bread">Bread</string>
    <string name="salad">Salad</string>
    <string name="appetizer">Appetizer</string>
    <string name="dessert">Dessert</string>
    <string name="side_dish">Side Dish</string>
    <string name="diet_type">Diet Type</string>
    <string name="gluten_free">Gluten Free</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="ketogenic">Ketogenic</string>
    <string name="vegan">Vegan</string>
    <string name="paleo">Paleo</string>
    <string name="primal">Primal</string>
    <string name="whole30">Whole30</string>
    <string name="apply">Apply</string>
    <string name="search">Search</string>
    <string name="dairy_free">Dairy Free</string>
    <string name="healthy">Healthy</string>
    <string name="cheap">Cheap</string>
    <string name="name">Name</string>
    <string name="gram">Grams</string>
    <string name="consistency">Consistency</string>
    <string name="original">Original</string>
    <string name="save_to_favorite">Save To Favorite</string>
    <string name="no_favorite_recipes">No Favorite Recipes.</string>
    <string name="delete_favorite_menu">Delete Favorite Menu</string>
    <string name="delete_all">Delete All</string>
    <string name="error">Error</string>
    <string name="share">Share</string>
    <string name="licenses">Licenses</string>
    <string name="settings">Settings</string>
</resources>