<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="4dp">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/ingredients_cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/strokeColor"
        app:strokeWidth="1dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/cardBackgroundColor"
            android:elevation="2dp">


            <View
                android:id="@+id/white_background"
                android:layout_width="120dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/ingredients_imageView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:layout_constraintBottom_toBottomOf="@+id/white_background"
                app:layout_constraintEnd_toEndOf="@+id/white_background"
                app:layout_constraintStart_toStartOf="@+id/white_background"
                app:layout_constraintTop_toTopOf="@+id/white_background"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/ingredients_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                android:fontFamily="@font/courgette"
                android:text="@string/name"
                android:textColor="@color/titleColor"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/white_background"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/ingredients_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/str_100"
                app:layout_constraintStart_toStartOf="@+id/ingredients_title"
                app:layout_constraintTop_toBottomOf="@+id/ingredients_title" />

            <TextView
                android:id="@+id/ingredients_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/gram"
                app:layout_constraintBottom_toBottomOf="@+id/ingredients_amount"
                app:layout_constraintStart_toEndOf="@+id/ingredients_amount"
                app:layout_constraintTop_toTopOf="@+id/ingredients_amount" />

            <TextView
                android:id="@+id/ingredients_consistency"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                android:text="@string/consistency"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/ingredients_amount"
                app:layout_constraintTop_toBottomOf="@+id/ingredients_amount" />

            <TextView
                android:id="@+id/ingredients_original"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="12dp"
                android:text="@string/original"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/ingredients_consistency"
                app:layout_constraintTop_toBottomOf="@+id/ingredients_consistency"
                app:layout_constraintVertical_bias="0.0" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>